--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/AsherPappas/Eat-Da-Burger/issues"
   },
-  "homepage": "https://github.com/AsherPappas/Eat-Da-Burger#readme"
+  "homepage": "https://github.com/AsherPappas/Eat-Da-Burger#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  }
 }
